Added messages and reworked the MessageBuilder